fixed issue where search box was cutting off some of the text

--- a/src/app/search/search.component.scss
+++ b/src/app/search/search.component.scss
@@ -22,7 +22,6 @@
   color: red;
 }
 .search-box {
-  padding: 10px;
   margin: 10px 0 10px 5%;
   width: 90%;
   border: 1px solid #ccc;
